Automate zfs snapshotting (#33)
* Streamline conditionals

* Enable weekly scrubs

* Install zfs-auto-snapshot

* Fix typo, scrub in the middle of the night

--- a/mainframe/tasks/zfs.yml
+++ b/mainframe/tasks/zfs.yml
@@ -3,7 +3,6 @@
   package:
     name: zfsutils-linux
     state: present
-  when: zfs_enable
 
 - name: Check if pool already imported
   shell: "zpool status {{ zpool_name }} >/dev/null 2>&1 && echo 'True' || echo 'False'"
@@ -22,11 +21,35 @@
     owner: root
     group: root
   notify: restart zed
-  when: zfs_enable
 
 - name: Import zfs pool
   command: "zpool import {{ zpool_name }}"
-  when: zfs_enable and not zpool_already_imported
+  when: not zpool_already_imported
+
+- name: Get zfs auto snapshot (from source)
+  unarchive:
+    src: https://github.com/zfsonlinux/zfs-auto-snapshot/archive/master.tar.gz
+    dest: /tmp
+    remote_src: true
+  when: ansible_distribution_version is version('18.04', '<')
+
+- name: Install zfs auto snapshot (from source)
+  make:
+    chdir: /tmp/zfs-auto-snapshot-master
+    target: install
+  when: ansible_distribution_version is version('18.04', '<')
+
+- name: Cleanup zfs auto snapshot files (from source)
+  file:
+    path: /tmp/zfs-auto-snapshot-master
+    state: absent
+  when: ansible_distribution_version is version('18.04', '<')
+
+- name: Install zfs auto snapshot (from package)
+  package:
+    name: zfs-auto-snapshot
+    state: present
+  when: ansible_distribution_version is version('18.04', '>=')
 
 - name: Configure zfs mount points
   zfs:
@@ -35,7 +58,7 @@
       mountpoint: "{{ item.mountpoint }}"
       canmount: "{{ item.canmount }}"
     state: present
-  when: zfs_enable and not zpool_already_imported
+  when: not zpool_already_imported
   with_items: "{{ zfs_datasets }}"
 
 - name: Configure nfs sharing
@@ -44,8 +67,17 @@
     extra_zfs_properties:
       sharenfs: "no_subtree_check,all_squash,rw=@{{ ansible_default_ipv4.network }}/24"
     state: present
-  when: zfs_enable and not zpool_already_imported
+  when: not zpool_already_imported
 
 - name: Enable zfs shares
   command: "zfs share -a"
-  when: zfs_enable and not zpool_already_imported
+  when: not zpool_already_imported
+
+- name: Enable periodic scrubbing
+  cron:
+    name: "scrub zfs pool"
+    job: "zpool scrub {{ zpool_name }}"
+    # at 6am on Sunday
+    hour: 6
+    minute: 0
+    dow: 0
