Refactor Makefile, update README

--- a/mainframe/Makefile
+++ b/mainframe/Makefile
@@ -1,29 +1,28 @@
 limit ?= mainframe
-.PHONY: all install_reqs playbook_run clean
+.PHONY: all install_reqs playbook_run clean limit_info
 
-all: playbook_run
+all: limit_info playbook_run
+
+limit_info:
+	@echo 'Running against: $(limit)'
 
 install_reqs:
 	@echo 'Fetching dependencies...'
 	@if [ -s requirements.yml ]; then \
-		ansible-galaxy install -r requirements.yml -f; \
+		ansible-galaxy install -r requirements.yml --force; \
 	fi
 
 # ask user for vault pass and save it with mode 0600, unless it's already saved.
 .vault_pass:
-	@if [ ! -s .vault_pass ]; then \
-		stty -echo; \
-		read -p ".vault_pass missing, enter vault password: " vpwd; \
-		stty echo; \
-		echo $$vpwd > .vault_pass; \
-		chmod 600 .vault_pass; \
-		echo; \
-	else \
-		echo '.vault_pass found'; \
-	fi
+	@stty -echo; \
+	read -p ".vault_pass missing, enter vault password: " vpwd; \
+	stty echo; \
+	echo $$vpwd > .vault_pass; \
+	chmod 600 .vault_pass; \
+	echo
 
 playbook_run: .vault_pass install_reqs
-	ansible-playbook --limit $(limit) playbook.yml --vault-password-file .vault_pass
+	@ansible-playbook --limit $(limit) playbook.yml --vault-password-file .vault_pass
 
 clean:
 	@-rm -f .vault_pass
