Update /etc/hosts on container start

--- a/mainframe/tasks/lxd_profile.yml
+++ b/mainframe/tasks/lxd_profile.yml
@@ -1,16 +1,19 @@
 ---
-- name: Create network profile
+- name: Create ansible container profile
   lxd_profile:
-    description: 'Intended for containers reachable from the Internet'
+    description: 'Common base profile for Ansible containers'
     name: ansible
     config:
       environment.TZ: ""
       user.user-data: |
         #cloud-config
+        bootcmd:
+          - cloud-init-per once fix_hosts echo "127.0.1.1 $(hostname -s)" >> /etc/hosts
         package-upgrade: true
         packages:
           - python-minimal
         timezone: Etc/UTC
+        update_etc_hosts: true
         users:
           - name: ansible
             sudo: [ "ALL=(ALL) NOPASSWD:ALL"]
