Lock base role version to legacy

--- a/mailserver/requirements.yml
+++ b/mailserver/requirements.yml
@@ -1,5 +1,6 @@
 - src: coaxial.raw-python
 - src: coaxial.base
+  version: 1.2.1
 - src: coaxial.mailcow
 - src: geerlingguy.docker
 - src: geerlingguy.pip
