--- a/mainframe/requirements.yml
+++ b/mainframe/requirements.yml
@@ -2,6 +2,7 @@
 # galaxy is unreliable, use github as a source instead
 - src: https://github.com/coaxial/ansible-role-base.git
   name: coaxial.base
+  version: 1.2.1
 - src: https://github.com/coaxial/ansible-role-lxd.git
   name: coaxial.lxd
 - src: https://github.com/angstwad/docker.ubuntu
