Refactor registry config

--- a/znc/playbook.yml
+++ b/znc/playbook.yml
@@ -30,16 +30,11 @@
         - path: /var/lib/znc/moddata/certauth/
           state: directory
           mode: 0o700
-        - path: /var/lib/znc/moddata/certauth/.registry
-          state: touch
-          mode: 0o600
 
     - name: Configure certauth
-      lineinfile:
-        path: /var/lib/znc/moddata/certauth/.registry
-        # cf. https://regex101.com/r/QMHUDO/1
-        regexp: "^{{ item.username }} (?!{{ item.pubkey }})[0-9a-f]{40}%20;$"
-        line: "{{ item.username }} {{ item.pubkey }}%20;"
+      template:
+        src: templates/.registry.j2
+        dest: /var/lib/znc/moddata/certauth/.registry
         owner: znc
         group: znc
         mode: 0o600
