Configure ZNC bouncer (#40)
* Update Makefile

* Create container

* Create znc container

* Create znc playbook

* Update containers var to new format

* Configure users

* Update /etc/hosts on container start

* Handle verbosity

* Lock base role version to legacy

* Create znc container

* Configure znc users

* Handle certfp

* Update cert name

* Refactor registry config

* Add instructions

* Format code properly

* Add more instructions

--- a/mainframe/requirements.yml
+++ b/mainframe/requirements.yml
@@ -1,4 +1,5 @@
 ---
+# galaxy is unreliable, use github as a source instead
 - src: https://github.com/coaxial/ansible-role-base.git
   name: coaxial.base
   version: 1.2.1
@@ -6,3 +7,5 @@
   name: coaxial.lxd
 - src: https://github.com/angstwad/docker.ubuntu
   name: angstwad.docker_ubuntu
+- src: https://github.com/coaxial/ansible-role-create-lxd-container.git
+  name: coaxial.create-lxd-container
