--- a/znc/Makefile
+++ b/znc/Makefile
@@ -1,4 +1,4 @@
-limit ?= mainframe
+limit ?= "znc"
 verbosity ?=
 .PHONY: all install_reqs playbook_run clean limit_info editvars
 
@@ -22,11 +22,15 @@ install_reqs:
 	chmod 600 .vault_pass; \
 	echo
 
-vars/vars.yml: .vault_pass
-	@ansible-vault create vars/vars.yml --vault-password-file .vault_pass
+vars/enc_vars.yml:
+	@echo 'Encrypted vars file missing, creating it first.'
+	@ansible-vault create vars/enc_vars.yml --vault-password-file .vault_pass
+	# ansible-vault create also opens the file for editing, so when make
+	# editvars, it will open it again when running the editvars task
+	@echo 'Encrypted vars file created, will now open it again for editing.'
 
-editvars: vars/vars.yml
-	@ansible-vault edit vars/vars.yml --vault-password-file .vault_pass
+editvars: .vault_pass vars/enc_vars.yml
+	@ansible-vault edit vars/enc_vars.yml --vault-password-file .vault_pass
 
 playbook_run: .vault_pass install_reqs
 	@ansible-playbook --limit $(limit) playbook.yml --vault-password-file .vault_pass $(verbosity)
