--- a/mainframe/playbook.yml
+++ b/mainframe/playbook.yml
@@ -17,7 +17,6 @@
     - include: tasks/hostname.yml
     - setup:
 
-
   roles:
     - coaxial.base
     - angstwad.docker_ubuntu
@@ -32,6 +31,10 @@
     - include_role:
         name: coaxial.lxd
     - include: tasks/send_mail.yml
+    - include: tasks/lxd_profile.yml
+    - include_role:
+        name: coaxial.create-lxd-container
+      with_items: "{{ cc__containers }}"
 
   handlers:
     - include: handlers/postfix.yml
