--- a/prometheus/requirements.yml
+++ b/prometheus/requirements.yml
@@ -1,6 +1,4 @@
 ---
-# If Galaxy is down, use:
-# - src: https://example.org/user/repo.git
-#   name: user.repo
-# Otherwise:
-# - src: coaxial.base
+- src: coaxial.base
+- src: coaxial.firewall_rule
+- src: cloudalchemy.prometheus
