--- a/grafana/requirements.yml
+++ b/grafana/requirements.yml
@@ -3,4 +3,9 @@
 # - src: https://example.org/user/repo.git
 #   name: user.repo
 # Otherwise:
-# - src: coaxial.base
+- src: coaxial.base
+  version: master
+- src: https://github.com/cloudalchemy/ansible-grafana
+  name: cloudalchemy.grafana
+- src: https://github.com/coaxial/ansible-role-firewall-rule.git
+  name: coaxial.firewall_rule
