--- a/mailserver/requirements.yml
+++ b/mailserver/requirements.yml
@@ -1,6 +1,11 @@
+---
 - src: coaxial.raw-python
 - src: coaxial.base
-  version: 1.2.1
+  version: v1.2.1
 - src: coaxial.mailcow
 - src: geerlingguy.docker
 - src: geerlingguy.pip
+- src: https://github.com/coaxial/ansible-role-firewall-rule.git
+  name: coaxial.firewall_rule
+- src: https://github.com/coaxial/ansible-role-node-exporter.git
+  name: coaxial.node_exporter
