--- a/mailserver/restore.yml
+++ b/mailserver/restore.yml
@@ -2,7 +2,7 @@
 - hosts: all
   become: true
   vars_files:
-    - vars.yml
+    - vars/enc_vars.yml
   vars:
     mailcow__ssh_key_name: borg_ssh_key
 
