--- a/downloader/Makefile
+++ b/downloader/Makefile
@@ -1,5 +1,6 @@
 limit ?= downloader
-verbosity ?=
+verbosity ?= 0
+ansible_opts = ANSIBLE_VERBOSITY=$(verbosity)
 .PHONY: all install_reqs playbook_run clean limit_info editvars
 
 all: limit_info playbook_run
@@ -29,8 +30,7 @@ editvars: vars/vars.yml
 	@ansible-vault edit vars/vars.yml --vault-password-file .vault_pass
 
 playbook_run: .vault_pass install_reqs
-	@ansible-playbook --limit $(limit) playbook.yml --vault-password-file .vault_pass $(verbosity)
-	@- rm -f playbook.retry
+	@$(ansible_opts) ansible-playbook --limit $(limit) playbook.yml --vault-password-file .vault_pass
 
 clean:
 	@-rm -f .vault_pass
