Enable GPU in jellyfin container for hw acceleration

--- a/jellyfin/playbook.yml
+++ b/jellyfin/playbook.yml
@@ -16,6 +16,12 @@
       loop_control:
         loop_var: role
 
+    - name: Let jellyfin use the GPU
+      user:
+        name: jellyfin
+        append: true
+        groups: video
+
     - name: Open port
       iptables:
         chain: INPUT
