Add list-backups target

--- a/edms/Makefile
+++ b/edms/Makefile
@@ -37,3 +37,19 @@ clean:
 
 decrypt_var:
 	@yq read vars.yml $(var) | ansible-vault decrypt --vault-password-file .vault_pass
+
+list-backups:
+	# Decrypt the key, save it to a ramdisk, list backups, and delete key
+	@sudo umount /tmp/tarsnap-key 2>/dev/null;\
+	rmdir /tmp/tarsnap-key 2>/dev/null;\
+	mkdir /tmp/tarsnap-key &&\
+	sudo mount -t tmpfs -o size=1m tarsnap-key /tmp/tarsnap-key &&\
+	ansible-vault decrypt ./files/edms.key \
+		--output /tmp/tarsnap-key/tarsnap.key \
+		--vault-password-file ./.vault_pass &&\
+	tarsnap \
+		--list-archives \
+		--keyfile /tmp/tarsnap-key/tarsnap.key | sort;\
+	head -c 1M < /dev/urandom > /tmp/tarsnap-key/tarsnap.key;\
+	sudo umount /tmp/tarsnap-key &&\
+	rmdir /tmp/tarsnap-key
