--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ before_install:
 script:
   - container_id=$(mktemp)
   - 'docker run --detach --volume=/home/travis/.ssh:/home/root/.ssh:ro --volume="${PWD}":/etc/ansible/playbooks/:ro ${run_opts} geerlingguy/docker-${distro}-ansible:latest "${init}" > "${container_id}"'
+  - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm apt update && DEBIAN_FRONTEND=noninteractive sudo apt install git -y'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-galaxy install -r /etc/ansible/playbooks/mainframe/requirements.yml'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-galaxy install -r /etc/ansible/playbooks/edms/requirements.yml'
   - 'docker exec --tty "$(cat ${container_id})" env TERM=xterm ansible-galaxy install -r /etc/ansible/playbooks/munin/requirements.yml'
