--- a/edms/Makefile
+++ b/edms/Makefile
@@ -13,8 +13,8 @@ install_reqs:
 		ansible-galaxy install -r requirements.yml --force; \
 	fi
 
-# ask user for vault pass and save it with mode 0600, unless it's already saved.
 .vault_pass:
+	@# ask user for vault pass and save it with mode 0600, unless it's already saved.
 	@stty -echo; \
 	read -p ".vault_pass missing, enter vault password: " vpwd; \
 	stty echo; \
@@ -37,3 +37,19 @@ clean:
 
 decrypt_var:
 	@yq read vars.yml $(var) | ansible-vault decrypt --vault-password-file .vault_pass
+
+list-backups:
+	@# Decrypt the key, save it to a ramdisk, list backups, and delete key
+	@sudo umount /tmp/tarsnap-key 2>/dev/null;\
+	rmdir /tmp/tarsnap-key 2>/dev/null;\
+	mkdir /tmp/tarsnap-key &&\
+	sudo mount -t tmpfs -o size=1m tarsnap-key /tmp/tarsnap-key &&\
+	ansible-vault decrypt ./files/edms.key \
+		--output /tmp/tarsnap-key/tarsnap.key \
+		--vault-password-file ./.vault_pass &&\
+	tarsnap \
+		--list-archives \
+		--keyfile /tmp/tarsnap-key/tarsnap.key | sort;\
+	shred /tmp/tarsnap-key/tarsnap.key;\
+	sudo umount /tmp/tarsnap-key &&\
+	rmdir /tmp/tarsnap-key
