--- a/servarr/tasks/dirs.yml
+++ b/servarr/tasks/dirs.yml
@@ -7,11 +7,11 @@
     - "{{ pvr_downloads_dir }}"
     - "{{ other_downloads_dir }}"
     - "{{ music_downloads_dir }}"
-    - "{{ torrent_incomplete_downloads_dir }}/nzb"
-    - "{{ nzb_incomplete_downloads_dir }}/torrent"
+    - "{{ torrent_downloads_dir }}"
+    - "{{ nzb_downloads_dir }}"
 
 - name: "Assert that required dirs exists"
   ansible.builtin.fail:
-    msg: "dir {{ iten.stat }} missing, check VM/container config"
+    msg: "dir {{ item.stat }} missing, check VM/container config"
   when: not item.stat.exists
   with_items: "{{ st.results }}"
