--- a/servarr/molecule/default/molecule.yml
+++ b/servarr/molecule/default/molecule.yml
@@ -18,5 +18,7 @@ platforms:
     pre_build_image: true
 provisioner:
   name: ansible
+  options:
+    vault_password_file: .vault_pass
 verifier:
   name: testinfra
