--- a/servarr/playbook.yml
+++ b/servarr/playbook.yml
@@ -5,15 +5,15 @@
     - vars/vars.yml
     - vars/enc_vars.yml
   handlers:
-    - include_tasks: handlers/main.yml
-  # roles:
-  #   - coaxial.base
-  #   - coaxial.servarr
+    - include: handlers/main.yml
+  roles:
+    # - coaxial.base
+    # - coaxial.servarr
   pre_tasks:
-    - include_tasks: tasks/dirs.yml
+    - include: tasks/dirs.yml
   tasks:
-    - include_tasks: tasks/nzbget.yml
-    # - include_tasks: tasks/transmission.yml
+    - include: tasks/nzbget.yml
+    - include: tasks/transmission.yml
     # - include_tasks: tasks/sonarr.yml
     # - include_tasks: tasks/radarr.yml
     # - include_tasks: tasks/backup.yml
