--- a/servarr/vars/vars.yml
+++ b/servarr/vars/vars.yml
@@ -6,4 +6,5 @@ nzb_downloads_dir: "{{ enc__nzb_downloads_dir }}"
 torrent_downloads_dir: "{{ enc__torrent_downloads_dir }}"
 watch_dir: "{{ enc__watch_dir }}"
 servarr_group: media
+# this is so that the tests work. ansible can't find the test files otherwise.
 files_dir: "{{ files_dir_prefix | default('.') }}"
