--- a/servarr/tasks/transmission.yml
+++ b/servarr/tasks/transmission.yml
@@ -1,35 +1,54 @@
 ---
-- name: Stop Transmission
-  ansible.builtin.service:
-    name: transmission
-    state: stopped
-  when: "transmission/{{ item }} is a file"
+- name: Check for Transmission files
+  delegate_to: localhost
+  ansible.builtin.stat:
+    path: "{{ files_dir }}/transmission/{{ item }}"
+  register: tf
+  ignore_errors: True
   with_items:
     - stats.json
     - settings.json
-  notify:
-    - Start Transmission
+    - dht.dat
+    - blocklist-update.sh
+    - torrents
+    - resume
+    - blocklists
+
+- name: Stop Transmission
+  ansible.builtin.service:
+    name: transmission-daemon
+    state: stopped
+  when: item.stat.exists
+  with_items: "{{ tf.results }}"
+  notify: Start Transmission
 
 - name: Restore Transmission settings etc.
   ansible.builtin.copy:
-    src: "transmission/{{ item.filename }}"
-    dest: "/home/debian-transmission/.config/transmission-daemon/{{ item.filename }}"
+    src: "{{ item.stat.path }}"
+    dest: "/home/debian-transmission/.config/transmission-daemon/{{ item.item | basename }}"
     backup: yes
-    mode: "{{ item.mode }}"
     owner: debian-transmission
     group: debian-transmission
+  when: item.stat.exists
+  with_items: "{{ tf.results }}"
+
+- name: Set Transmission settings permissions
+  ansible.builtin.file:
+    path: "/home/debian-transmission/.config/transmission-daemon/{{ item.filename }}"
+    mode: "{{ item.mode }}"
+  ignore_errors: true # ignore missing files
   with_items:
     - filename: stats.json
-      mode: 0600
+      mode: "0600"
     - filename: settings.json
-      mode: 0600
+      mode: "0600"
     - filename: dht.dat
-      mode: 0600
+      mode: "0600"
     - filename: blocklist-update.sh
-      mode: 0700
+      mode: "0700"
     - filename: torrents
-      mode: 0700
+      mode: "0700"
     - filename: resume
-      mode: 0700
+      mode: "0700"
     - filename: blocklists
-      mode: 0700
+      mode: "0700"
